# learning_platform

./: .env-sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py
materials/: models.py  paginators.py  serializers.py  services.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_subscription.py  0003_course_creator_lesson_creator.py  0004_alter_course_creator_alter_lesson_creator.py  0005_course_price.py  0006_course_updated_at_alter_subscription_unique_together.py
nginx/: nginx.conf
users/: models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/fixtures/: groups.json
users/management/commands/: create_payments.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_options_subscription.py  0004_payment_link_delete_subscription.py
