[tool.poetry]
name = "drf"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.4"
django-phonenumber-field = "^8.1.0"
djangorestframework = "^3.16.0"
phonenumbers = "^9.0.10"
pillow = "^11.3.0"
dotenv = "^0.9.9"
django-filter = "^25.1"
djangorestframework-simplejwt = "^5.5.1"
coverage = "^7.10.2"
drf-yasg = "^1.21.10"
stripe = "^12.4.0"
celery = "^5.5.3"
redis = "^6.4.0"
django-celery-beat = "^2.8.1"
gunicorn = "^23.0.0"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
